--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"ip":"Testing09.aternos.me",
-	"port": "25565",
-	"name": "afkbot"
+	"ip":"ujwal1.aternos.me",
+	"port": "44844",
+	"name": "[OWNER]AlwaysOnline"
 }
